# Education

./: README.md
HSE/math-statistics/homework-2-on-mathematical-statistics/: верхняя граница разности для пуассона.ipynb
HSE/math-statistics/homework-3-on-mathematical-statistics/: disrt_Poisson.ipynb  sample mean exponential distribution.ipynb  выборочная дисперсия.ipynb  выборочное дисперсия для экспоненциального распределения.ipynb
HSE/math-statistics/homework4_mat_stat/: Kolmogorov_Simple.ipynb  Neiman-Pirson.ipynb  Smirnov.ipynb  difficult hypothesis expon.ipynb  difficult hypothesis poisson.ipynb  hard hypothesis Kolmogorov.ipynb  simpleHypothesis of poisson and exponential.ipynb
HSE/math-statistics/poisson-distribution/: sumulating poisson distribution-checkpoint.ipynb
job/Counter/: .dev.env  .gitignore  README.md  default_utils.txt  docker-compose.yml  pytest.ini
job/Counter/Backend/: settings.py  urls.py
job/Counter/core/: .coverage  admin.py  models.py  urls.py  views.py
job/Counter/core/htmlcov/: __init___py.html  admin_py.html  apps_py.html  index.html  migrations_0001_initial_py.html  migrations___init___py.html  models_py.html  status.json  tests_Factories_py.html  (+5 more)
online-courses/CPP_Course/white/: Final.cpp  Todolist.cpp
pet-projects/File-Uploader/: .gitignore  manage.py
pet-projects/File-Uploader/FileSharing/: urls.py  wsgi.py
pet-projects/File-Uploader/app/: forms.py  models.py  urls.py  views.py
pet-projects/File-Uploader/templates/: base.html
pet-projects/password_manager/: .pre-commit-config.yaml  pyproject.toml  store.py
(+18 files in other folders)
